--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,4 +19,5 @@ security:
                 check_path: login
     access_control:
         - { path: ^\/(|login|register|register/team/[a-f0-9]*|locale)$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/, roles: ROLE_USER }
