--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.0.0-beta.3",
-        "jquery": "^3.2.1"
+        "jquery": "^3.2.1",
+        "open-iconic": "^1.1.1"
     }
 }
