--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,8 @@ security:
                 default_target_path: dashboard
                 login_path: login
                 check_path: login
+    role_hierarchy:
+            ROLE_ADMIN: ROLE_USER
     access_control:
         - { path: ^\/(|login|register|register/team/[a-f0-9]*|locale)$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
