--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,9 @@ security:
                 default_target_path: dashboard
                 login_path: login
                 check_path: login
+            logout:
+                path:   /logout
+                target: /
     role_hierarchy:
             ROLE_ADMIN: ROLE_USER
     access_control:
