--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "bootstrap": "^4.0.0-beta.3",
         "jquery": "^3.2.1",
-        "open-iconic": "^1.1.1"
+        "open-iconic": "^1.1.1",
+        "popper.js": "^1.12.9"
     }
 }
